--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -355,9 +355,9 @@ template {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 0.15fr 0.80fr 0.05fr;
-  grid-template-rows: 0.1fr auto;
-  gap: 0px 0px;
+  grid-template-columns: 20% 78% auto;
+  grid-template-rows: 10vh 85vh 5vh;
+  gap: 0 0;
   grid-template-areas:
     "legend top-nav ."
     "side-nav main-content .";
@@ -369,6 +369,7 @@ html, body {
 }
 
 body {
+    height: 100vh;
     background-color: #444;
     color: white;
 }
@@ -377,20 +378,13 @@ body {
     display: none;
 }
 
+
 p {
     max-width: 80ch;
     padding: 4px; 
 }
 
-#main-content {
-    display: flex;
-    justify-content: center;
-}
 
-#main-content pre, #main-content p, #main-content ul { 
-    margin-left: 2em;
-    margin-right: 2em;
-}
 
 ul {
     padding-left: 1em;
@@ -427,10 +421,36 @@ pre {
 
 header {
     margin-left: 2rem;
-    grid-area: legend;
+    grid-area: 1 / 1 / 2 / 3;
+    background-color: #444;
+}
+
+header h1 {
+    margin: 0.3em 0 0.2em 0;
+}
+
+#toc-btn {
+    background-color: #333;
+    margin: 1rem 0 0 auto;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-self: flex-start;
+    grid-area: top-nav;
+    max-width: 4rem;
+    font-size: 2rem;
+    border: 2px solid #333;
+    border-radius: 4px;
+
 }
 
 header > div {
+    display: flex;
+    flex-direction: row;
+    justify-items: between;
+}
+
+header > div > div {
     display: flex;
     flex-direction: column;
 }
@@ -438,6 +458,11 @@ header > div {
 #commit-msg {
     grid-area: top-nav;
     margin: auto;
+}
+
+img {
+    display: flex;
+    margin: 1em auto;
 }
 
 #top-img {
@@ -492,11 +517,21 @@ a:hover {
 }
 
 #side-wrapper {
+    direction: rtl;
+    overflow-y: scroll;
     grid-area: side-nav;
+    margin: 0 0 0 2em; 
 }
 
 #toc-details {
-    margin: 1rem 0 0 2rem;
+    direction: ltr;
+    margin: 0 0 0 1rem;
+    word-break: break-word;
+}
+
+
+#toc-details a:hover + ul {
+    color: #FAB57F;
 }
 
 .nav-side {
@@ -520,13 +555,29 @@ a:hover {
 }
 
 #main-content {
-    grid-area: main-content;
-    max-width: 90%;
+    grid-area: 2 / 1 / 3 / 3;
+    max-width: 100%;
     background-color: #333;
     padding: 1rem;
-    margin-bottom: 6rem;
+    margin: 0 0 0 2rem;
+    display: flex;
+    justify-content: center;
 }
 
+#main-content > div {
+    min-width: 0;
+    overflow: hidden;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+
+#main-content h1 {
+    text-align: center;
+}
+
+#main-content pre, #main-content p, #main-content ul { 
+    margin: 0 2em;
+}
 
 #toMain {
     background-color: #333;
@@ -640,10 +691,6 @@ table {
 pre {
     overflow: scroll;
     width: auto;
-}
-
-#main-content {
-    max-width: 100%;
 }
 
 #main-content pre, #main-content p, #main-content ul, #main-content h3 {
