--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -23,6 +23,7 @@ $endif$
     <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
     </script>
+    <!-- <script src="./assets/js/mathjax/es5/tex-chtml.js" id="MathJax-script" async></script> -->
     <link rel="stylesheet" href="./assets/stylesheets/style.css" type="text/css" />
   </head>
 
@@ -31,15 +32,36 @@ $endif$
     <div class="grid-container">
    
     <header>
-      <h1>$title$</h1>
-      <div>
-            $if(author)$
-            <small>$author$</small>
-            $endif$
-            <time>
-                <small>$date$</small>
-            </time>
-      </div>
+        <div>
+          <div>
+          <h1>$title$</h1>
+          <div>
+                $if(author)$
+                <small>$author$</small>
+                $endif$
+                <time>
+                    <small>$date$</small>
+                </time>
+          </div>
+          </div>
+          <script type="text/javascript">
+              function toggleTOC() {
+                  const elm = document.getElementById("main-content");
+                  if (elm.style.gridArea == "main-content") {
+                      elm.style.gridArea = '2 / 1 / 3 / 3'
+                      elm.style.margin = '0 0 0 2em';
+                  } else {
+                      elm.style.gridArea = 'main-content'
+                      elm.style.margin = '0 0 0 1em';
+                  }
+              }
+          </script>  
+
+          <button id="toc-btn" class="mobile-btn" 
+                  onClick="toggleTOC()">
+              &#128214;
+          </button>
+        </div>
     </header>
 
     <!-- <button class="mobile-btn" -->
@@ -53,16 +75,12 @@ $endif$
         <q>$commitmsg$</q>
     </section>
     $endif$
+ 
 
-    <!-- <button id="menu-open" --> 
-    <!--         class="mobile-btn" --> 
-    <!--         onClick="mobileMenuOpen()"> -->
-    <!--     &#9776; -->
-    <!-- </button> -->
 
 
     $if(image)$
-    <img id="top-img" src="../static/$image$" />      
+    <img id="top-img" src="../assets/images/$image$" />      
     $endif$
     $topNav$
     
@@ -73,10 +91,9 @@ $endif$
             &times;
         </button>
     $if(toc)$
-    <details id='toc-details'>
-        <summary>ToC</summary>
-        $toc$
-    </details>
+    <div id="toc-details">
+    $toc$
+    </div>
     $endif$
 
     $sideNav$
@@ -98,4 +115,4 @@ $endif$
   </body>
 </html>
 
-<!-- <script src="../static/git-blog.js" type="text/javascript"></script> -->
+<!-- <script src="./assets/js/overview.js" type="text/javascript"></script> -->
