--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -378,6 +378,10 @@ body {
     display: none;
 }
 
+.mobile-btn:hover {
+    border: 2px solid #4b4f52;
+}
+
 
 p {
     max-width: 80ch;
@@ -436,13 +440,18 @@ header h1 {
     display: flex;
     flex-direction: row;
     align-self: flex-start;
-    grid-area: top-nav;
+    /* grid-area: top-nav; */
     max-width: 4rem;
     font-size: 2rem;
     border: 2px solid #333;
     border-radius: 4px;
 
 }
+
+#toc-btn:hover {
+    border: 2px solid #4b4f52;
+}
+
 
 header > div {
     display: flex;
@@ -519,6 +528,7 @@ a:hover {
 #side-wrapper {
     direction: rtl;
     overflow-y: scroll;
+    scrollbar-color: #4b4f52 #2a2c2d;
     grid-area: side-nav;
     margin: 0 0 0 2em; 
 }
@@ -555,11 +565,12 @@ a:hover {
 }
 
 #main-content {
-    grid-area: 2 / 1 / 3 / 3;
+    /* grid-area: 2 / 2 / 3 / 3; */
+    grid-area: main-content;
     max-width: 100%;
     background-color: #333;
     padding: 1rem;
-    margin: 0 0 0 2rem;
+    margin: 0 0 0 1rem;
     display: flex;
     justify-content: center;
 }
@@ -568,7 +579,8 @@ a:hover {
     min-width: 0;
     overflow: hidden;
     overflow-y: scroll;
-    scrollbar-width: none;
+    scrollbar-color: #444 #333;
+    /* scrollbar-width: none; */
 }
 
 #main-content h1 {
