--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -47,11 +47,12 @@ $endif$
           <script type="text/javascript">
               function toggleTOC() {
                   const elm = document.getElementById("main-content");
-                  if (elm.style.gridArea == "main-content") {
+                  let style = window.getComputedStyle(elm).getPropertyValue('grid-column-start');
+                  if (style == 'main-content') {
                       elm.style.gridArea = '2 / 1 / 3 / 3'
                       elm.style.margin = '0 0 0 2em';
                   } else {
-                      elm.style.gridArea = 'main-content'
+                      elm.style.gridArea = "main-content";
                       elm.style.margin = '0 0 0 1em';
                   }
               }
