--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -53,7 +53,7 @@ $endif$
                       elm.style.margin = '0 0 0 2em';
                   } else {
                       elm.style.gridArea = "main-content";
-                      elm.style.margin = '0 0 0 1em';
+                      elm.style.margin = '0 0 0 0.1rem';
                   }
               }
           </script>  
