--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -44,20 +44,6 @@ $endif$
                 </time>
           </div>
           </div>
-          <script type="text/javascript">
-              function toggleTOC() {
-                  const elm = document.getElementById("main-content");
-                  let style = window.getComputedStyle(elm).getPropertyValue('grid-column-start');
-                  if (style == 'main-content') {
-                      elm.style.gridArea = '2 / 1 / 3 / 3'
-                      elm.style.margin = '0 0 0 2em';
-                  } else {
-                      elm.style.gridArea = "main-content";
-                      elm.style.margin = '0 0 0 0.1rem';
-                  }
-              }
-          </script>  
-
           <button id="toc-btn" class="mobile-btn" 
                   onClick="toggleTOC()">
               &#128214;
@@ -116,4 +102,4 @@ $endif$
   </body>
 </html>
 
-<!-- <script src="./assets/js/overview.js" type="text/javascript"></script> -->
+<script src="./assets/js/overview.js" type="text/javascript"></script>
