--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -24,7 +24,7 @@ $endif$
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
     </script>
     <!-- <script src="./assets/js/mathjax/es5/tex-chtml.js" id="MathJax-script" async></script> -->
-    <link rel="stylesheet" href="./assets/stylesheets/style.css" type="text/css" />
+    <link rel="stylesheet" href="$basepath$/assets/stylesheets/style.css" type="text/css" />
   </head>
 
   <body>
@@ -99,4 +99,4 @@ $endif$
   </body>
 </html>
 
-<script src="./assets/js/overview.js" type="text/javascript"></script>
+<script src="$basepath$/assets/js/overview.js" type="text/javascript"></script>
