--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -43,8 +43,13 @@ $endif$
                 </time>
             </div>
         </div>
+            <button class="mobile-btn header-btn" 
+                id="toggle-color" 
+                onclick="toggleColorScheme()">
+                &#128161;
+            </button>
             <button id="toc-btn"
-                    class="mobile-btn"
+                    class="mobile-btn header-btn"
                     onClick="toggleTOC()">
                 &#128214;
             </button>
