--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -21,7 +21,7 @@ $endif$
     <meta property="og:type" content="website" />
     <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script> -->
     <script id="MathJax-script" async
-          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+          src="https://cdn.jsdelivr.net/npm/mathjax@4.0.0-alpha.1/es5/tex-mml-chtml.js">
     </script>
     <!-- <script src="./assets/js/mathjax/es5/tex-chtml.js" id="MathJax-script" async></script> -->
     <link rel="stylesheet" href="$basepath$/assets/stylesheets/style.css" type="text/css" />
