--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -23,7 +23,6 @@ $endif$
     <script id="MathJax-script"  async
           src="https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.js">
     </script>
-    <!-- <script src="./assets/js/mathjax/es5/tex-chtml.js" id="MathJax-script" async></script> -->
     <link rel="stylesheet" href="$basepath$/assets/stylesheets/style.css" type="text/css" />
   </head>
 
@@ -103,4 +102,5 @@ $endfor$
   </body>
 </html>
 
+<script src="$basepath$/assets/js/mathjaxLoader.js" type="text/javascript"></script>
 <script src="$basepath$/assets/js/overview.js" type="text/javascript"></script>
