--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -104,3 +104,4 @@ $endfor$
 
 <script src="$basepath$/assets/js/mathjaxLoader.js" type="text/javascript"></script>
 <script src="$basepath$/assets/js/overview.js" type="text/javascript"></script>
+<script src="$basepath$/assets/js/observer.js" type="text/javascript"></script>
