finally refactors normalize into base.css

--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -23,6 +23,7 @@ $endif$
     <script id="MathJax-script"  async
           src="https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.js">
     </script>
+    <link rel="stylesheet" href="$basepath$/assets/stylesheets/base.css" type="text/css" />
     <link rel="stylesheet" href="$basepath$/assets/stylesheets/style.css" type="text/css" />
   </head>
 
