--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -29,7 +29,7 @@ $endif$
 
   <body>
 
-    <div class="grid-container">
+    <div id="grid-container" toc-visible="init">
     <header>
         <div>
             <div>
@@ -43,13 +43,13 @@ $endif$
                 </time>
             </div>
         </div>
-            <button class="mobile-btn header-btn" 
+            <button class="header-btn" 
                 id="toggle-color" 
                 onclick="toggleColorScheme()">
                 &#128161;
             </button>
             <button id="toc-btn"
-                    class="mobile-btn header-btn"
+                    class="header-btn"
                     onClick="toggleTOC()">
                 &#128214;
             </button>
