--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -34,32 +34,29 @@ $endif$
         <div>
             <div>
                 <h1>$title$</h1>
+                <div>
+                    $if(author)$
+                    <small>$author$</small>
+                    $endif$
+                    <time>
+                        <small>$date$</small>
+                    </time>
+                </div>
+            </div>
             <div>
-                $if(author)$
-                <small>$author$</small>
-                $endif$
-                <time>
-                    <small>$date$</small>
-                </time>
+                <button class="header-btn" 
+                    id="toggle-color" 
+                    onclick="toggleColorScheme()">
+                    &#128161;
+                </button>
+                <button id="toc-btn"
+                        class="header-btn"
+                        onClick="toggleTOC()">
+                    &#128214;
+                </button>
             </div>
         </div>
-            <button class="header-btn" 
-                id="toggle-color" 
-                onclick="toggleColorScheme()">
-                &#128161;
-            </button>
-            <button id="toc-btn"
-                    class="header-btn"
-                    onClick="toggleTOC()">
-                &#128214;
-            </button>
-        </div>
     </header>
-
-    <!-- <button class="mobile-btn" -->
-    <!--         id="toMain"> -->
-    <!--         <a href="/">&#8592;</a> -->
-    <!-- </button> -->
 
     $if(commitmsg)$
     <section id="commit-msg">
@@ -79,13 +76,15 @@ $endif$
             onclick="mobileMenuClose()">
             &times;
         </button>
-    $if(toc)$
-    <div id="toc-details">
-      $toc$
-    </div>
-    $endif$
+        <div>
+            $if(toc)$
+            <div id="toc-details">
+              $toc$
+            </div>
+            $endif$
 
-    $sideNav$
+            $sideNav$
+        </div>
     </div>
 
 <section id="main-content">
