--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -6,23 +6,25 @@
     <meta name="generator" content="pandoc">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-$for(author-meta)$
+    $for(author-meta)$
     <meta name="author" content="$author-meta$">
-$endfor$
-$if(date-meta)$
+    $endfor$
+    $if(date-meta)$
     <meta name="dcterms.date" content="$date-meta$">
-$endif$
-$if(description)$
+    $endif$
+    $if(description)$
     <meta name="description" content="$description$">
-$endif$
-$if(tags)$
+    $endif$
+    $if(tags)$
     <meta name="keywords" content="$for(tags)$$tags$$sep$, $endfor$">
-$endif$
+    $endif$
     <meta property="og:type" content="website" />
-    <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script> -->
-    <script id="MathJax-script"  async
-          src="https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.js">
-    </script>
+
+
+    <link rel="stylesheet" href="$basepath$/assets/js/Temml-0.9.0/dist/Temml-Local.css">
+    <script src="$basepath$/assets/js/Temml-0.9.0/dist/temml.min.js"></script>
+    <script src="$basepath$/assets/js/Temml-0.9.0/contrib/auto-render/dist/auto-render.min.js"></script>
+
     <link rel="stylesheet" href="$basepath$/assets/stylesheets/base.css" type="text/css" />
     <link rel="stylesheet" href="$basepath$/assets/stylesheets/style.css" type="text/css" />
   </head>
@@ -102,6 +104,6 @@ $endfor$
   </body>
 </html>
 
-<script src="$basepath$/assets/js/mathjaxLoader.js" type="text/javascript"></script>
+<script src="$basepath$/assets/js/temml-loader.js" type="text/javascript"></script>
 <script src="$basepath$/assets/js/overview.js" type="text/javascript"></script>
 <script src="$basepath$/assets/js/observer.js" type="text/javascript"></script>
