adds color inversion filter for imgs to dark mode

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -21,6 +21,10 @@
     --highl-def-color: darkslategrey;
 }
 
+:root[color-mode=dark] figure {
+    filter: invert(90%);
+}
+
 html, body {
     font-family: Cambria Math, sans-serif;
     font-size: 16px;
