--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -457,3 +457,17 @@ td {
         grid-template-columns: var(--outer-margin) var(--side-nav-width) auto var(--outer-margin);
     }
 }
+
+@media only screen and (max-width: 700px) {
+    :root {
+        --side-nav-width: calc(100vw - 2*var(--outer-margin));
+    }
+
+    #grid-container[toc-visible="init"] {
+        grid-template-columns: var(--outer-margin) 0 auto var(--outer-margin);
+    }
+
+    #grid-container[toc-visible="toggle"] {
+        grid-template-columns: var(--outer-margin) var(--side-nav-width) 0 var(--outer-margin);
+    }
+}
